# Lab-19

./: CMakeLists.txt  main.c
Libs/algorithms/: algorithms.h
Libs/array/: array.c  array.h
Libs/files/: files.c  files.h
Libs/matrix/: matrix.h
Libs/set_bits/: set_bits.h
Libs/set_ordered/: set_ordered.c  set_ordered.h
Libs/set_unordered/: set_unordered.h
Libs/string/: string.c  string.h
Libs/test/: test.c  test.h
Libs/vector/: vector.c  vector.h
Libs/vectors_void/: Vector_void.c  vector_void.h
